[gd_scene load_steps=3 format=3 uid="uid://c3rgb38ixck3e"]

[ext_resource type="Theme" uid="uid://chs2uls8gw48x" path="res://score_theme.tres" id="1_augpk"]
[ext_resource type="Script" path="res://menu.gd" id="1_ck6uf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_augpk")
script = ExtResource("1_ck6uf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
theme = ExtResource("1_augpk")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_augpk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="ResetButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
